[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/gfx/player/orb.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/lights/ogsvth9k42s51.png" type="Texture" id=2]
[ext_resource path="res://src/orb/Orb.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/16. Tiny Pop/Tiny_Pop_03.wav" type="AudioStream" id=4]
[ext_resource path="res://src/orb/ExplodingOrb.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/orb/Flicker.gd" type="Script" id=6]
[ext_resource path="res://addons/xsm/state.gd" type="Script" id=7]
[ext_resource path="res://src/orb/xsm/Orbiting.gd" type="Script" id=8]
[ext_resource path="res://src/orb/xsm/Delivery.gd" type="Script" id=9]
[ext_resource path="res://src/orb/xsm/Consume.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.75 ]
}

[sub_resource type="Animation" id=3]
resource_name = "burst"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -250 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "flicker"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Light2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 4.0, 4.5, 3.5, 4.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.75, 1.25, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "implode"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.941176, 0.913725, 0.717647, 1 ), Color( 0.941176, 0.913725, 0.717647, 0 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 17.0294

[node name="Orb" type="Area2D" groups=["HasLight"]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.941176, 0.913725, 0.717647, 1 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_speed = 0.8
anims/RESET = SubResource( 1 )
anims/burst = SubResource( 3 )
anims/flicker = SubResource( 2 )
anims/implode = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 4.0
color = Color( 0.941176, 0.913725, 0.717647, 1 )
energy = 0.75

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="sfx_burst" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ExplodingOrb" parent="." instance=ExtResource( 5 )]
emitting = false

[node name="XSM" type="Node" parent="."]
script = ExtResource( 7 )
history_size = 0
fsm_owner = NodePath("..")
disabled = false
debug_mode = false
timed = false
next_state = NodePath("Flicker")

[node name="Flicker" type="Node" parent="XSM"]
script = ExtResource( 6 )
oscillation_range = 10.0
animation_player = NodePath("../../Sprite/AnimationPlayer")
anim_on_enter = "flicker"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Orbiting" type="Node" parent="XSM"]
script = ExtResource( 8 )
max_accel = 10.0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Delivery" type="Node" parent="XSM"]
script = ExtResource( 9 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Consume" type="Node" parent="XSM"]
script = ExtResource( 10 )
animation_player = NodePath("../../Sprite/AnimationPlayer")
anim_on_enter = "implode"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[connection signal="body_entered" from="." to="." method="_on_Orb_body_entered"]
